removed errors and removed session references

--- a/Tournament/Views/Accounts/PasswordAccepted.cshtml
+++ b/Tournament/Views/Accounts/PasswordAccepted.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Microsoft.ReportingServices.Interfaces
+
 @{
     ViewBag.Title = "PasswordAccepted";
     Layout = "~/Views/Shared/_LoginLayout.cshtml";
@@ -7,7 +8,12 @@
 <h2>Password Change Accepted</h2>
 
 <p>Your password change was accepted.</p>
-
-@Html.ActionLink("Log in", "Index", "Home")<br />
+@{
+    if (!User.Identity.IsAuthenticated)
+    {
+        @Html.ActionLink("Log in", "Login", "Accounts")
+    }
+}
+<br />
 
 
