--- a/Tournament/Views/Home/Welcome.cshtml
+++ b/Tournament/Views/Home/Welcome.cshtml
@@ -1,9 +1,8 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Welcome";
 }
 
-<h2>Welcome to @HttpContext.Current.Session["LeagueName"].ToString()</h2>
+<h2>Welcome to ViewBag.leaguename</h2>
 
 <p style="font-size: large; font-weight:200">@ViewBag.Info</p>
 
