--- a/Tournament/Views/Matches/CreateMatches.cshtml
+++ b/Tournament/Views/Matches/CreateMatches.cshtml
@@ -31,7 +31,7 @@
 
     </table>
 
-    This will erase all matches for the @HttpContext.Current.Session["LeagueName"].ToString() and create a new round robin set of matches using the
+    This will erase all matches for the @ViewBag.LeagueName and create a new round robin set of matches using the
     league's schedule and teams.
     <br />
     @using (Html.BeginForm())
