--- a/Tournament/Views/RinkOrders/Delete.cshtml
+++ b/Tournament/Views/RinkOrders/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Delete</h2>
-
+<div class="validation-summary-errors text-danger">@ViewBag.Error</div>
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Rink Play Order</h4>
@@ -46,7 +46,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
         @Html.HiddenFor(model => model.rowversion)
         <div class="form-actions no-color">
