--- a/Tournament/Views/Shared/_LeagueLayout.cshtml
+++ b/Tournament/Views/Shared/_LeagueLayout.cshtml
@@ -1,8 +1,15 @@
 ﻿
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var leaguename = "";
+    var cookie = Request.Cookies["leaguename"];
+    if (cookie != null)
+    {
+        leaguename = cookie.Value;
+    }
+
 }
-<h2>@HttpContext.Current.Session["LeagueName"].ToString()</h2>
+<h2>@leaguename</h2>
 
 @RenderBody()
 
