--- a/Tournament/Views/Accounts/ChangePassword.cshtml
+++ b/Tournament/Views/Accounts/ChangePassword.cshtml
@@ -12,14 +12,13 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-
+        @Html.HiddenFor(model => model.EmailAddress)
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.EmailAddress, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.EmailAddress, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EmailAddress, "", new { @class = "text-danger" })
+                @Html.DisplayFor(model => model.EmailAddress, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
 
