made delete disabled when not allowed in lists

--- a/Tournament/Views/Leagues/Index.cshtml
+++ b/Tournament/Views/Leagues/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Tournament.Models.League>
+﻿@model IEnumerable<Tournament.Models.LeagueAllowDelete_Result>
 
 @{
     ViewBag.Title = "Index";
@@ -83,9 +83,24 @@
         </td>
 
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-            @Html.ActionLink("League Users", "Index", "UserLeagues", new { id = item.id }, null) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.id })
+            @if (User.IsInRole("Admin") || User.IsInRole("LeagueAdmin"))
+            {
+                @Html.ActionLink("Edit", "Edit", new { id = item.id });
+                @Html.Raw(" | ");
+            }
+            @Html.ActionLink("League Users", "Index", "UserLeagues", new { id = item.id }, null)
+            @if ((User.IsInRole("Admin") || User.IsInRole("LeagueAdmin")) && item.cnt == 0)
+            {
+                @Html.Raw(" | ");
+                if (item.cnt > 0)
+                { 
+                    <span style="color: gray;">Delete</span>
+                }
+                else
+                {
+                    @Html.ActionLink("Delete", "Delete", new { id = item.id });
+                }
+            }
         </td>
     </tr>
 }
