--- a/Tournament/Views/Schedules/Index.cshtml
+++ b/Tournament/Views/Schedules/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Tournament.Models.Schedule>
+﻿@model IEnumerable<Tournament.Models.ScheduleAllowDelete_Result>
 
 @{
     ViewBag.Title = "Index";
@@ -48,9 +48,16 @@
             if (User.IsInRole("Admin") ||
                 User.IsInRole("LeagueAdmin"))
             {
-                @Html.ActionLink("Edit", "Edit", new {id = item.id}) 
-                @Html.Raw(" | ")
-                @Html.ActionLink("Delete", "Delete", new {id = item.id})
+                @Html.ActionLink("Edit", "Edit", new {id = item.id})
+                @Html.Raw(" | ");
+                if (item.cnt > 0)
+                { 
+                    <span style="color: gray;">Delete</span>
+                }
+                else
+                {
+                    @Html.ActionLink("Delete", "Delete", new { id = item.id });
+                }
             }
         }
             </td>
