fixed two small errors in screen files

--- a/Tournament/Views/Home/Welcome.cshtml
+++ b/Tournament/Views/Home/Welcome.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Welcome";
 }
 
-<h2>Welcome to ViewBag.leaguename</h2>
+<h2>Welcome to @ViewBag.leaguename</h2>
 
 <p style="font-size: large; font-weight:200">@ViewBag.Info</p>
 
