fixed up found errors and removed a nonnormalized column in db

--- a/Tournament/Views/Home/Contact.cshtml
+++ b/Tournament/Views/Home/Contact.cshtml
@@ -4,11 +4,11 @@
 <h2>@ViewBag.Title.</h2>
 
 This application is supported by Jeffrey Lederer.
-The source code depository for this application as at <a href="https://github.com/jeffreylederer/Tournament">https://github.com/jeffreylederer/Tournament</a>
+The source code depository for this application as at <a href="https://github.com/jeffreylederer/Tournament" target="blank">https://github.com/jeffreylederer/Tournament</a>
 
 <br/><br/>
 
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:jeffrey@winnlederer.com" target="blank">jeffrey@winnlederer.com</a><br />
+    <strong>Support:</strong>   <a href="mailto:jeffrey@winnlederer.com">jeffrey@winnlederer.com</a><br />
 </address>
