--- a/Tournament/Views/Schedules/Edit.cshtml
+++ b/Tournament/Views/Schedules/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
+    int weeknumber = 1;
 
 }
 
@@ -18,15 +19,10 @@
     @Html.HiddenFor(model => model.id)
     @Html.HiddenFor(model => model.Leagueid)
     @Html.HiddenFor(model => model.rowversion)
-    @Html.HiddenFor(model => model.WeekNumber)
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.WeekNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DisplayFor(model => model.WeekNumber, new { htmlAttributes = new { @class = "form-control" } })
-        </div>
-    </div>
-    <br /><br />><br /><br/><br/>
+
+
+    <br /><br /><br /><br /><br /> <br /><br />
     <div class="form-group">
         @Html.LabelFor(model => model.GameDate, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -60,7 +56,7 @@
 <table class="table-condensed table-striped">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.WeekNumber)
+            Week Number
         </th>
         <th>
             @Html.DisplayNameFor(model => model.GameDate)
@@ -69,12 +65,11 @@
             @Html.DisplayNameFor(model => model.Cancelled)
         </th>
     </tr>
-
     @foreach (var item in (IEnumerable<Tournament.Models.Schedule>)ViewBag.Schedule)
     {
         <tr>
             <th>
-                @Html.DisplayFor(modelItem => item.WeekNumber)
+                @weeknumber
             </th>
             <td>
                 @Html.DisplayFor(modelItem => item.GameDate)
@@ -82,10 +77,8 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Cancelled)
             </td>
-
-
-
         </tr>
+        weeknumber++;
     }
 </table>
 
