--- a/Tournament/Views/Users/Delete.cshtml
+++ b/Tournament/Views/Users/Delete.cshtml
@@ -33,7 +33,8 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-
+        @Html.HiddenFor(model => model.id)
+        @Html.HiddenFor(model => model.rowversion)
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
