added limit points

--- a/Tournament/Views/Leagues/Index.cshtml
+++ b/Tournament/Views/Leagues/Index.cshtml
@@ -47,6 +47,10 @@
             @Html.DisplayNameFor(model => model.StartWeek)
         </th>
 
+        <th>
+            @Html.DisplayNameFor(model => model.PointsLimit)
+        </th>
+
         <th></th>
     </tr>
 
@@ -80,6 +84,10 @@
 
         <td>
             @Html.DisplayFor(modelItem => item.StartWeek)
+        </td>
+        
+        <td>
+            @Html.DisplayFor(modelItem => item.PointsLimit)
         </td>
 
         <td>
