--- a/Tournament/Views/Leagues/Delete.cshtml
+++ b/Tournament/Views/Leagues/Delete.cshtml
@@ -93,6 +93,14 @@ Deleting a leagues will:
         <dd>
             @Html.DisplayFor(model => model.StartWeek)
         </dd>
+        
+        <dt>
+            @Html.DisplayNameFor(model => model.PointsLimit)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PointsLimit)
+        </dd>
 
 
     </dl>
