--- a/Tournament/Views/Leagues/Edit.cshtml
+++ b/Tournament/Views/Leagues/Edit.cshtml
@@ -100,6 +100,13 @@
         </div>
     </div>
 
+    <div class="form-group">
+        @Html.LabelFor(model => model.PointsLimit, htmlAttributes: new {@class = "control-label col-md-2"})
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.PointsLimit)
+        </div>
+    </div>
+
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
