upgraded newson package

--- a/Tournament/Views/Matches/Scoring.cshtml
+++ b/Tournament/Views/Matches/Scoring.cshtml
@@ -75,7 +75,7 @@
                         players1 = $"Team {Model.Team1.TeamNo} ({Model.Team1.Player.Membership.NickName}, {Model.Team1.Player2.Membership.NickName})";
                         break;
                     case 3:
-                        players1 = $"Team {Model.Team1.TeamNo} ({Model.Team1.Player.Membership.NickName}, {Model.Team1.Player1.Membership.NickName}, {Model.Team.Player2.Membership.NickName})";
+                        players1 = $"Team {Model.Team1.TeamNo} ({Model.Team1.Player.Membership.NickName}, {Model.Team1.Player1.Membership.NickName}, {Model.Team1.Player2.Membership.NickName})";
                         break;
                 }
             }
